# api-docs-template

./: .gitignore  .pre-commit-config.yaml  .railwayignore  AGENT-ONBOARDING-PLAN.md  API-DOCUMENTATION.md  Dockerfile  END-TO-END-TEST-PLAN.md  LOVABLE_SETUP.md  Makefile  README.md  REPO-B-IMPROVEMENTS.md  REPO-B-INTEGRATION-STATUS.md  REPO-C-ENV-SETUP.md  SECURITY-FIX-AUTHORIZATION.md  TROUBLESHOOTING-ENV-VARS.md  TROUBLESHOOTING.md  app.py  check_db.py  index.html  local.yml  manage.py  package-lock.json  package.json  pytest.ini  railway.json  requirements.txt  setup_database.py  start.sh  test_static.py  tsconfig.json  vite.config.js  wsgi.py
backend/: .flake8  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Procfile  create_admin.py  mypy.ini  nixpacks.toml  production.yml  pyproject.toml  pytest.ini  wsgi.py
backend/api/: urls.py
backend/api/v1/: urls.py
backend/control_plane/: LOCAL_DEV.md  README.md  __init__.py  adapters.py  apps.py  control_plane_adapter.py  executor_adapter.py  governance_pack.py  models.py  onboarding_views.py  packs.py  repo_b_audit_adapter.py  test_repo_c_action.py  usage_views.py  views.py
backend/control_plane/acp/: __init__.py  router.py  types.py
backend/hfcscoringengine/: middleware.py  urls.py
backend/hfcscoringengine/settings/: base.py  (+3 more)
backend/requirements/: base.txt  local.txt
backend/scoringengine/: admin.py  apps.py  forms.py  helpers.py  models.py  resources.py
backend/tests/: conftest.py  fixtures.py  test_control_plane_manage.py  test_models.py  test_performance.py  test_templatetags.py
backend/users/: admin.py
(+186 files in other folders)
